Data warehouse scenario now all green, awaiting further refinements...